测试、修改了一下多用户更新